--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,26 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  nginx
+  name: nginx
   namespace: tsuki
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app:  nginx
-  replicas: 2
+      app: nginx
   strategy:
+    type: RollingUpdate
     rollingUpdate:
       maxSurge: 1
       maxUnavailable: 1
-    type: RollingUpdate
   template:
     metadata:
       labels:
-        app:  nginx
+        app: nginx
     spec:
       containers:
-      - name:  nginx
-        image:  nginx:alpine
+      - name: nginx
+        image: nginx:alpine
         resources:
           requests:
             cpu: 100m
@@ -47,11 +47,11 @@ spec:
           failureThreshold: 3
           periodSeconds: 10
         ports:
-        - containerPort:  80
-          name:  http
+        - containerPort: 80
+          name: http
         volumeMounts:
         - name: nginx-config
-          mountPath: /etc/nginx.conf.d
+          mountPath: /etc/nginx/conf.d
       volumes:
         - name: nginx-config
           configMap: 
